# agentic-llm-unlearning-modify

./: .gitignore  LICENSE  README.md  glm_test_result.txt  pyproject.toml  subjects.json
assets/datasets/beijing_data/: beijing_data_test.json  密云区免疫规划预防接种门诊单位信息.csv  密云区免疫规划预防接种门诊单位信息.json  密云区政府采购项目采购合同信息.csv  密云区政府采购项目采购合同信息.json  纳税信用A级企业信息.csv  纳税信用A级企业信息.json  高新技术企业统计.csv  高新技术企业统计.json
assets/datasets/tofu/: forget01.json  forget05.json
prompts/: critic_llm_system.txt  critic_llm_user_template.txt  forget_llm_few_shot.txt  forget_llm_user_template.txt
src/datasets_downloader/: beijing_data_download.py  beijing_data_download_config.py  beijing_data_download_test.py  tofu_dataset_download.py
src/unlearning_agent/: agent.py  agent_glm.py  agent_qwen.py  main.py  main_glm.py  main_qwen.py
src/unlearning_agent/read/: agent_gml_read.py  main_gml_read.py
